--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,10 @@ dependencies:
   flutter:
     sdk: flutter
   fl_chart: ^0.70.2
-  intl: ^0.18.1
+  intl: ^0.20.2
+  permission_handler: ^11.3.1
+  telephony: ^0.2.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
