--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,11 +40,20 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.11.0
   firebase_auth: ^5.4.2
+  shared_preferences: ^2.5.2
+  crypto: ^3.0.6
+  cloud_firestore: ^5.6.3
+  flutter_launcher_icons: ^0.14.3
+  device_info_plus: ^11.3.0
+  standard_searchbar: ^2.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.png"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
