--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_local_notifications: ^19.3.0
   encrypt: ^5.0.1
   flutter_secure_storage: ^9.0.0
+  package_info_plus: ^8.0.2
 
 dev_dependencies:
   flutter_test:
